tomcat.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: onlinebookstore
spec:
  replicas: 3
  selector:
    matchLabels:
      app: onlinebookstore
  template:
    metadata:
      labels:
        app: onlinebookstore
    spec:
      containers:
      - name: onlinebookstore
        image: dvsr1411/onlinebookstore:v1
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: onlinebookstore
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: onlinebookstore
