ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: onlinebookstore-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/certificate-arn: <cert-id>
spec:
  rules:
    - host: <domain-name>
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: onlinebookstore
                port:
                  number: 80
